adapts backend data output format according to Recharts, starts frontend implementation
