# backend/src/swagger/swagger_output.json
@@ -136,33 +136,10 @@
                         "type": "object",
                         "properties": {
                           "rocket": {
-                            "type": "object",
-                            "properties": {
-                              "_id": {
-                                "type": "string"
-                              },
-                              "name": {
-                                "type": "string"
-                              }
-                            }
-                          },
+                            "type": "string"
+                          } , 
                           "count": {
-                            "type": "integer"
-                          },
-                          "result": {
-                            "type": "array",
-                            "items": {
-                              "type": "object",
-                              "properties": {
-                                "_id": {
-                                  "type": "string",
-                                  "enum": ["SUCESSO", "FALHA", "INDETERMINADO"]
-                                },
-                                "count": {
-                                  "type": "integer"
-                                }
-                              } 
-                            }
+                            "type": "number"
                           }
                         }
                       }
@@ -185,14 +162,60 @@
         }
       }
     },
-    "/launches/stats-per-rocket-per-year": {
+    "/launches/stats-per-result": {
       "get": {
         "tags": ["Launch"],
-        "description": "Endpoint to get count of launches per rocket per year.",
+        "description": "Endpoint to get launches counts per result.",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "Count of launches per rocket per year.",
+            "description": "Count of launches per result.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "results": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "result": {
+                            "type": "string",
+                            "enum": ["SUCESSO", "FALHA", "INDETERMINADO"]
+                          },
+                          "count": {
+                            "type": "number"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error message.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }   
+              }
+            }             
+          }
+        }
+      }
+    },
+    "/launches/stats-per-year": {
+      "get": {
+        "tags": ["Launch"],
+        "description": "Endpoint to get count of launches per year.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Count of launches per year.",
             "content": {
               "application/json": {
                 "schema": {
@@ -205,32 +228,15 @@
                         "properties": {
                           "year": {
                             "type": "integer"
-                          },
-                          "count": {
-                            "type": "integer"
-                          },
-                          "rockets": {
-                            "type": "array",
-                            "items": {
-                              "type": "object",
-                              "properties": {
-                                "rocket": {
-                                  "type": "object",
-                                  "properties": {
-                                    "_id": {
-                                      "type": "string"
-                                    },
-                                    "name": {
-                                      "type": "string"
-                                    }
-                                  }
-                                },
-                                "count": {
-                                  "type": "integer"
-                                }
-                              }
-                            }
                           }
+                        },
+                        "additionalProperties": {
+                          "type": "integer"
+                        },
+                        "example": {
+                          "year": 2020,
+                          "Falcon 9": 8,
+                          "Falcon Heavy": 3
                         }
                       }
                     }
